# FinMedia-Sentiment-Processing

./: .env.template  .gitignore  CONFIG_RULES.md  README.md  assets.json  config.json
finmedia/: config.json  go.mod  go.sum
finmedia/cmd/ingest/: main.go
finmedia/internal/assets/: detector.go
finmedia/internal/config/: config.go
finmedia/internal/fetcher/: rss.go
finmedia/internal/models/: news_event.go  processed_event.go
finmedia/internal/pipeline/: dispatcher.go  preprocessing_dispatcher.go
finmedia/internal/preprocessing/: client.go
finmedia/proto/: preprocessing.pb.go  preprocessing.proto  preprocessing_grpc.pb.go
inference/: Cargo.toml
inference/FinBERT/: quantize_FinBERT.py  requirements.txt  test_setup.py
inference/src/: error.rs  inference.rs  lib.rs  model.rs  tokenizer.rs
orchestrator/: Cargo.toml  README.md  build.rs
orchestrator/src/: benchmarks.rs  client.rs  go_service.rs  interceptor_server.rs  main.rs  output.rs  pipeline.rs  preprocessing.rs  signals_processing.rs  unified_event.rs
orchestrator/src/benchmarks/: latency_test.rs  metrics.rs
preprocessing/: Cargo.toml  README.md  build.rs
preprocessing/proto/: preprocessing.proto
preprocessing/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  processor.rs  server.rs
signals/: Cargo.toml  mod.rs
signals/src/: analysis.rs  correlation.rs  filters.rs  frequency_analysis.rs  lib.rs  quantization.rs  scoring.rs  time_series.rs  transforms.rs
vdatabase/: Cargo.toml
vdatabase/src/: client.rs  config.rs  embeddings.rs  error.rs  lib.rs  query.rs  schema.rs  storage.rs
vdatabase/tests/: config_tests.rs  database_upload_test.rs  embedding_tests.rs  essential_tests.rs  integration_tests.rs  query_tests.rs  schema_tests.rs
