[package]
name = "finmedia-preprocessing"
version = "0.1.0"
edition = "2021"
authors = ["FinMedia Team"]
description = "gRPC preprocessing service for financial news sentiment analysis"
license = "MIT"

[[bin]]
name = "finmedia-preprocessing"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration (minimal)
toml = "0.8"

# Text processing
regex = "1.0"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"