[package]
name = "finmedia-signals"
version = "0.1.0"
edition = "2021"
authors = ["FinMedia Team"]
description = "Signals and systems processing for financial sentiment analysis"

[dependencies]
# Mathematical computation
nalgebra = "0.32"
rustfft = "6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
approx = "0.5"