[package]
name = "vdatabase"
version = "0.1.0"
edition = "2021"

[dependencies]
# Qdrant client for vector database operations
qdrant-client = "1.11"

# FinBERT inference for embeddings
inference = { path = "../inference" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"